<resources>
    <string name="app_name">The Best Pet</string>
    <string name="tvTituloInicio">¡ The Best Pet !</string>
    <string name="tvName_CV">Balto</string>
    <string name="btnInicio">Comenzar</string>
    <string name="pmascotasExtra">mascota_extra</string>
    <string name="pmascotas">mascotas</string>

    <string name="username_instagram">username</string>

    <string name="mcontactos">Contactos</string>
    <string name="macercade">Acerca de</string>
    <string name="mconfigurar">Configurar Cuenta</string>
    <string name="mnotificaciones">Recibir Notificaciones</string>

    <string name="fm_user">Usuario</string>
    <string name="fm_mail">Correo</string>
    <string name="fm_password_email">Contraseña del correo</string>
    <string name="fm_message">Mensaje</string>
    <string name="fm_btn">Enviar</string>

    <string name="txt_mensaje_error">Por favor asegurese de que lleno todos los datos correctamente.</string>

    <string name="txt_acercade_titulo">Acerca de</string>
    <string name="txt_acercade_titulo2">Desarrollador</string>
    <string name="txt_acercade_nombre">Nombre: Adderly Sinay</string>
    <string name="txt_acercade_fecha">Fecha de nacimiento: 1993-07-19</string>
    <string name="txt_acercade_pais">Pais: Guatemala</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="descripcionConfiguracion">Ingresa tu usuario de instagram para poder obtener los datos necesarios para la aplicación.</string>
    <string name="btnConfig">Guardar Cuenta</string>
    <string name="editTextConfig">Username</string>
    <string name="txt_informacion_titulo">Información de la cuenta</string>
    <string name="txt_informacion_username">Username</string>
    <string name="txt_informacion_miIdInstagram">Id_Instragram</string>
    <string name="txt_informacion_miToken">Token</string>
    <string name="txt_informacion_miIdFirebase">id_firebase</string>
    <string name="minformacion">Información Cuenta</string>
    <string name="texto_accion_toque_ver_perfil">Ver Perfil</string>
</resources>
