<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="asoftwaresolution.thebestpet.Acercade">

    <include android:id="@+id/miActionBar"
        layout="@layout/actionbar"
        android:paddingRight="@dimen/activity_horizontal_padding"
        android:paddingBottom="@dimen/activity_vertical_padding"
        android:paddingLeft="@dimen/activity_horizontal_padding">
    </include>

    <TextView
        android:id="@+id/tvTitleAD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_informacion_titulo"
        android:textSize="@dimen/tv_textSizeInformaciondeTitle1"
        android:layout_centerHorizontal="true"
        android:paddingTop="@dimen/tv_PaddingTopAcercadeTitle1"/>

    <TextView
        android:id="@+id/tvUsernameInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_informacion_username"
        android:textSize="@dimen/tv_textSizeAcercadeNombre"
        android:layout_centerHorizontal="true"
        android:paddingTop="@dimen/tv_PaddingTopAcercadeNombre"
        android:layout_below="@+id/tvTitleAD"/>

    <TextView
        android:id="@+id/tvIdInstagramInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_informacion_miIdInstagram"
        android:textSize="@dimen/tv_textSizeAcercadeFecha"
        android:layout_centerHorizontal="true"
        android:paddingTop="@dimen/tv_PaddingTopAcercadeFecha"
        android:layout_below="@+id/tvUsernameInfo"/>

    <TextView
        android:id="@+id/tvIdFirebaseInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_informacion_miIdFirebase"
        android:textSize="@dimen/tv_textSizeAcercadePais"
        android:layout_centerHorizontal="true"
        android:paddingTop="@dimen/tv_PaddingTopAcercadePais"
        android:layout_below="@+id/tvIdInstagramInfo"/>

</RelativeLayout>
