<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="asoftwaresolution.thebestpet.Contacto">

    <include android:id="@+id/miActionBar"
        layout="@layout/actionbar">
    </include>

    <android.support.design.widget.TextInputLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:id="@+id/textInputLayoutUser"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp"
        android:layout_below="@+id/miActionBar"
        android:paddingBottom="@dimen/activity_vertical_padding"
        android:paddingTop="@dimen/activity_vertical_padding"
        android:paddingRight="@dimen/activity_horizontal_padding"
        android:paddingLeft="@dimen/activity_horizontal_padding"
        >

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fm_user"
            android:id="@+id/form_username"
            android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textInputLayoutEmail"
        android:layout_below="@+id/textInputLayoutUser"
        android:paddingBottom="@dimen/activity_vertical_padding"
        android:paddingTop="@dimen/activity_vertical_padding"
        android:paddingRight="@dimen/activity_horizontal_padding"
        android:paddingLeft="@dimen/activity_horizontal_padding">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fm_mail"
            android:id="@+id/form_email"
            android:inputType="textEmailAddress"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:id="@+id/textInputLayoutPasswordEmail"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp"
        android:layout_below="@+id/textInputLayoutEmail"
        android:paddingBottom="@dimen/activity_vertical_padding"
        android:paddingTop="@dimen/activity_vertical_padding"
        android:paddingRight="@dimen/activity_horizontal_padding"
        android:paddingLeft="@dimen/activity_horizontal_padding"
        >

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fm_password_email"
            android:id="@+id/form_password_email"
            android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/textInputLayoutDescription"
        android:layout_below="@+id/textInputLayoutPasswordEmail"
        android:layout_above="@+id/btnEnviar"
        android:paddingBottom="@dimen/activity_vertical_padding"
        android:paddingTop="@dimen/activity_vertical_padding"
        android:paddingRight="@dimen/activity_horizontal_padding"
        android:paddingLeft="@dimen/activity_horizontal_padding">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fm_message"
            android:id="@+id/form_message"
            android:inputType="textMultiLine"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/fm_btn"
        android:theme="@style/BotonStyle"
        android:textStyle="bold"/>

</RelativeLayout>
